Fix verical toolbar: toggle toolbar will create wrong size of table sticky-header

--- a/styles/components/_table.scss
+++ b/styles/components/_table.scss
@@ -7,6 +7,17 @@ table.sticky-header {
   z-index: 98;
   left: auto !important;
   background: transparent;
+  transition: $transition;
+
+  @include mq($breakpointMedium) {
+    .gin--vertical-toolbar & {
+      width: calc(100% - min(10vw, 96px) - 3rem - #{$toolbarWidth}) !important;
+    }
+
+    .gin--vertical-toolbar[data-toolbar-menu='open'] & {
+      width: calc(100% - min(10vw, 96px) - 3rem - #{$toolbarOpenWidth}) !important;
+    }
+  }
 
   th {
     &:first-child {
